[tool.poetry]
name = "df_designer"
version = "0.1.0"
description = ""
authors = ["Ramimashkouk <rami.n.mashkouk@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.3"
typer = "^0.9.0"
pydantic-settings = "^2.2.1"
aiofiles = "^23.2.1"
cookiecutter = "^2.6.0"
dff = { git = "https://github.com/deeppavlov/dialog_flow_framework.git", rev = "4b4cf69dd96e1ed21ec3bf9d5950c010616b24cc" }
omegaconf = "^2.3.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
httpx-ws = "^0.6.0"

[tool.poetry.scripts]
dflowd = "app.cli:cli"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
isort = "^5"
black = "^22"
flake8 = "^4"
