[tool.poetry]
name = "df_designer"
version = "0.1.0"
description = ""
authors = ["Ramimashkouk <rami.n.mashkouk@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
typer = "^0.9.0"
pydantic-settings = "^2.2.1"
aiofiles = "^23.2.1"

[tool.poetry.scripts]
dflowd = "app.cli:cli"
